--- a/src/assets/css/date-picker.css
+++ b/src/assets/css/date-picker.css
@@ -9,11 +9,12 @@
 }
 
 .react-datepicker__input-container {
-  font-size: 1rem;
+  font-size: 18px;
   padding-left: 1rem;
   padding-right: 1rem;
-  height: 2.5rem;
-  border-radius: 0.25rem;
+  height: 48px;
+  line-height: 27px;
+  border-radius: 0.4rem;
   border: 1px solid;
   border-color: #e2e8f0;
 }
@@ -131,4 +132,12 @@
 
 .react-datepicker__close-icon::after:hover {
   color: hsl(0, 0%, 70%);
+}
+
+@media (max-width: 767px) {
+  .react-datepicker__input-container {
+    font-size: 16px;
+    height: 40px;
+    line-height: 24px;
+  }
 }
